--- a/JSprojects/Project6_CalculadoraDeIMC/style.css
+++ b/JSprojects/Project6_CalculadoraDeIMC/style.css
@@ -1,13 +1,13 @@
 body {
-    font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #ececec;
+    font-family: Arial, sans-serif;
 }
 
-button {
-    margin-bottom: 20px;
+input, button {
+    margin: 5px;
 }
