--- a/JSprojects/Project5_Cronometro/styles.css
+++ b/JSprojects/Project5_Cronometro/styles.css
@@ -9,5 +9,6 @@ body {
 }
 
 button {
-    margin: 5px; /* Define a margem ao redor dos botões */
+    margin: 5px;
+    /* Define a margem ao redor dos botões */
 }
